<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/japan"
    android:fillViewport="true"
    android:isScrollContainer="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/user_continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="#80000000"
            android:text="@string/user_continue_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/user_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/user_date_hint"
            android:inputType="date"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_birth_date_textview"
            app:layout_constraintTop_toBottomOf="@+id/user_birth_date_textview" />

        <EditText
            android:id="@+id/user_email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/user_birth_date"
            app:layout_constraintStart_toStartOf="@+id/user_email"
            app:layout_constraintTop_toBottomOf="@+id/user_email" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/username_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username_textview"
            app:layout_constraintTop_toTopOf="@+id/username_textview" />

        <TextView
            android:id="@+id/user_birth_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/user_birth_date"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/username_textview"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/user_email"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/user_birth_date"
            app:layout_constraintTop_toBottomOf="@+id/user_birth_date" />

        <TextView
            android:id="@+id/username_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:text="@string/username_textview"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>